Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77766

QLowEnergyConteroller bluez-dbus: Missing notification/error if a connected BTLE service vanished

    XMLWordPrintable

Details

    • Linux/Wayland, Linux/X11, Linux/Other display system
    • 27c0ae9ff94d545fb43446179e95276112b9f2cc (qt/qtconnectivity/5.14)

    Description

      With the current Bluez-DBus implementation for QLowEnergyController I don't get any notification when the service to which I'm connected has disappeared. This can happen when I close an iPad app with that service.

      Write errors to that service are only skipped with a log warning message.

      I'm working on a patch for that issue and will submit it later

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ablasche Alex Blasche
            qibjaw Christian Waßmuth
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes